# Mini-JS-Runtime-Project

./: HOW_TO_RUN.txt  README.md  quick_run_windows.md  sample_test.js
backend/: CMakeLists.txt  httplib.h  main.cpp  runtime.cpp  runtime.h  server.cpp  server.h  server_minimal.cpp
frontend/: index.html  script.js  simple_test_client.js  style.css
